# pdf-extractext

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  output.md  pyproject.toml  skills-lock.json
app/: main.py
app/config/: settings.py
app/domain/contracts/: document_converter.py
app/domain/entities/: audit_log.py  document.py
app/domain/exceptions/: domain_exceptions.py
app/domain/mappers/: to_dto.py
app/domain/repositories/: audit_log_repository.py  document_repository.py
app/domain/use_cases/: __init__.py  checksum.py  converter.py  document_use_cases.py  flow_validation.py  pipeline.py  to_dto.py
app/infrastructure/: exception_handlers.py
app/infrastructure/converters/: docling_md.py  extract_text.py
app/infrastructure/dependencies/: dependencies.py
app/presentation/middleware/: check_middleware.py  error_handler.py
app/presentation/routes/: __init__.py  audit_routes.py  document.py  document_delete.py  document_find_by_checksum.py  document_save.py  document_update.py  document_upload.py
app/presentation/schemas/: __init__.py  audit_log_response.py  document.py  document_upload.py  exception_response.py
tests/: conftest.py
tests/data/: mock_repository.py  test_delete.py  test_find_by_checksum.py  test_mongo_audit_repository.py  test_save.py  test_update.py
tests/domain/: mock_pdf.py  test_audit_decorator.py  test_checksum.py  test_convert.py  test_encryptation_check.py  test_file_only_has_imagen.py  test_file_signature_validator.py  test_file_size_validator.py  test_find_audit_by_checksum_use_case.py  test_find_audit_use_case.py  test_liveness_check.py  test_trailer_check.py
tests/presentation/: test_audit_routes.py  test_document_delete.py  test_document_find_by_checksum.py  test_document_save.py  test_document_update.py  test_document_upload.py
(+23 files in other folders)
