[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Convertidor de PDF a MD"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi>=0.110,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.6,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]